--- a/EDA/Diwali_sales/Diwali_EDA.ipynb
+++ b/EDA/Diwali_sales/Diwali_EDA.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "4  23877.0     NaN       NaN  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "(11251, 15)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
    "metadata": {},
    "source": [
     "Data Overview:\n",
-    "- DataFrame with 11239 entries, 13 columns, and 1.1+ MB memory usage.\n",
+    "- DataFrame with 11251 entries, 13 columns, and 1.1+ MB memory usage.\n",
     "\n",
     "Key Columns:\n",
     "- User_ID, Cust_name, Product_ID, Gender, Age, Marital_Status, State, Zone, Occupation, Product_Category, Orders, and Amount.\n",
@@ -692,12 +692,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Data Reduction**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.drop(['User_ID','Status','unnamed1'],axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Step 4: Checking For Duplicate records / Rows**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,19 +730,75 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cust_name           0\n",
+       "Product_ID          0\n",
+       "Gender              0\n",
+       "Age Group           0\n",
+       "Age                 0\n",
+       "Marital_Status      0\n",
+       "State               0\n",
+       "Zone                0\n",
+       "Occupation          0\n",
+       "Product_Category    0\n",
+       "Orders              0\n",
+       "Amount              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### **Data Reduction**"
+    "df1.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df1.drop(['User_ID','Status','unnamed1'],axis=1, inplace=True)"
+    "df1.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11243, 12)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape"
    ]
   },
   {
@@ -815,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +897,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,11 +917,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1['Gender'].replace({'F':'Female', 'M':'Male'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cust_name</th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age Group</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>Product_Category</th>\n",
+       "      <th>Orders</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Age_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sanskriti</td>\n",
+       "      <td>P00125942</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Maharashtra</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>Healthcare</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23952.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kartik</td>\n",
+       "      <td>P00110942</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Govt</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23934.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bindu</td>\n",
+       "      <td>P00118542</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Uttar Pradesh</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Automobile</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23924.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sudevi</td>\n",
+       "      <td>P00237842</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Karnataka</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Construction</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23912.0</td>\n",
+       "      <td>Young</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Joni</td>\n",
+       "      <td>P00057942</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>Food Processing</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23877.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Cust_name Product_ID  Gender Age Group  Age  Marital_Status  \\\n",
+       "0  Sanskriti  P00125942  Female     26-35   28               0   \n",
+       "1     Kartik  P00110942  Female     26-35   35               1   \n",
+       "2      Bindu  P00118542  Female     26-35   35               1   \n",
+       "3     Sudevi  P00237842    Male      0-17   16               0   \n",
+       "4       Joni  P00057942    Male     26-35   28               1   \n",
+       "\n",
+       "            State      Zone       Occupation Product_Category  Orders  \\\n",
+       "0     Maharashtra   Western       Healthcare             Auto       1   \n",
+       "1  Andhra Pradesh  Southern             Govt             Auto       3   \n",
+       "2   Uttar Pradesh   Central       Automobile             Auto       3   \n",
+       "3       Karnataka  Southern     Construction             Auto       2   \n",
+       "4         Gujarat   Western  Food Processing             Auto       2   \n",
+       "\n",
+       "    Amount Age_category  \n",
+       "0  23952.0        Adult  \n",
+       "1  23934.0        Adult  \n",
+       "2  23924.0        Adult  \n",
+       "3  23912.0        Young  \n",
+       "4  23877.0        Adult  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
    ]
   },
   {
@@ -886,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +1213,7 @@
        "Amount          12672.0  23952.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1335,7 @@
        "Age_category      11243      4               Adult  6416"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
