--- a/Python Basics/3.Data_Types.ipynb
+++ b/Python Basics/3.Data_Types.ipynb
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "id": "cf28df5a",
    "metadata": {},
    "outputs": [
@@ -2305,7 +2305,7 @@
        "{'name': ['John', 'Bhavan'], 'age': [20, 23], 'grade': ['A', 'B']}"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2318,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "id": "36c3bdc0",
    "metadata": {},
    "outputs": [
@@ -2440,6 +2440,27 @@
     "# keys method\n",
     "keys = new_dict.keys()\n",
     "print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "feb3337b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': ['John', 'Bhavan'], 'age': [20, 23], 'grade': ['A', 'B']}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dict"
    ]
   },
   {
@@ -2630,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31dbd95d",
    "metadata": {},
    "outputs": [
@@ -2654,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ce9ab343",
    "metadata": {},
    "outputs": [
@@ -2664,7 +2685,7 @@
        "'Virat Kohli'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6b95b9a8",
    "metadata": {},
    "outputs": [
@@ -2685,7 +2706,7 @@
        "'Virat Kohli'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2696,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eaba4fd8",
    "metadata": {},
    "outputs": [
@@ -2714,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7c889b27",
    "metadata": {},
    "outputs": [
@@ -2726,7 +2747,7 @@
        " 'South Africa': 'Du Plesis'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2737,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ed2c8258",
    "metadata": {},
    "outputs": [
@@ -2750,7 +2771,7 @@
        " 'India': 'Rohith Sharma'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2763,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b7cb46de",
    "metadata": {},
    "outputs": [
@@ -2777,7 +2798,7 @@
        " 'England': 'Ben Stokes'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c7ce9c15",
    "metadata": {},
    "outputs": [
@@ -2804,20 +2825,41 @@
        " 'England': {'T20': 'Ben Stokes', 'ODI': 'Eoin Morgan', 'Test': 'Joe Root'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Nested Dictionary\n",
-    "captains['England'] ={'T20':'Ben Stokes','ODI':'Eoin Morgan', 'Test':'Joe Root'}\n",
+    "captains['England'] = {'T20':'Ben Stokes','ODI':'Eoin Morgan', 'Test':'Joe Root'}\n",
     "captains"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "b66bd6ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Eoin Morgan'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "captains['England']['ODI']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "77cfad8a",
    "metadata": {},
    "outputs": [],
@@ -2827,7 +2869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "50798901",
    "metadata": {},
    "outputs": [
@@ -3043,7 +3085,6 @@
     "print(max(unique_numbers))\n",
     "print(min(unique_numbers))\n",
     "print(len(unique_numbers))\n",
-    "print(sorted(unique_numbers))\n",
     "print(sorted(unique_numbers, reverse=True))"
    ]
   },
@@ -3079,8 +3120,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "048b2469",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Python',\n",
+       " 'is',\n",
+       " 'powerful,',\n",
+       " 'Python',\n",
+       " 'is',\n",
+       " 'versatile,',\n",
+       " 'Python',\n",
+       " 'is',\n",
+       " 'fun']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example: Finding unique words in a text\n",
+    "text = \"Python is powerful, Python is versatile, Python is fun\"\n",
+    "text.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0b31cdee",
    "metadata": {},
    "outputs": [
     {
@@ -3089,14 +3161,12 @@
        "{'Python', 'fun', 'is', 'powerful,', 'versatile,'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Example: Finding unique words in a text\n",
-    "text = \"Python is powerful, Python is versatile, Python is fun\"\n",
     "unique_words = set(text.split(' '))\n",
     "unique_words"
    ]
