--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -449,7 +449,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "id": "c7e18f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is greater than 5 and equal to 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "if x > 5 and x==10:\n",
+    "    print(\"x is greater than 5 and equal to 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "75396646",
    "metadata": {},
    "outputs": [
@@ -474,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "11893c60",
    "metadata": {},
    "outputs": [
@@ -482,12 +502,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-4 is negative number\n"
+      "-5 is negative number\n",
+      "-5 -ve is odd number\n"
      ]
     }
    ],
    "source": [
-    "x = -4\n",
+    "x = -5\n",
     "if x>0:\n",
     "    if x%2==0:\n",
     "        print(x,\"is even number\")\n",
@@ -495,13 +516,17 @@
     "        print(x,\"is odd number\")\n",
     "elif x<0:\n",
     "    print(x,\"is negative number\")\n",
+    "    if x%2==0:\n",
+    "        print(x,\"-ve is even number\")\n",
+    "    else:\n",
+    "        print(x,\"-ve is odd number\")\n",
     "else:\n",
     "    print(x,\"is zero\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "06c6e281",
    "metadata": {},
    "outputs": [
@@ -509,7 +534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not a valid triangle\n"
+      "Isosceles triangle\n"
      ]
     }
    ],
@@ -531,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "b9657e80",
    "metadata": {},
    "outputs": [
@@ -539,15 +564,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22  is not divisble by 3 itself hence I wont check if it is diviisible by 5\n",
-      "We understood if-else\n"
+      "27  is divisible by 3\n",
+      "27  is divisble by only 3 and not by 5\n",
+      "We understood Nested-if\n"
      ]
     }
    ],
    "source": [
     "a = int(input('Tell a number : '))\n",
     "\n",
-    "if a%3==0:\n",
+    "if a%3==0 or a%5==0:\n",
+    "    print(a, ' is divisible by 3 or 5')\n",
     "    if a%5==0:\n",
     "        print(a, ' is divisible by both 3 and 5')\n",
     "    else:\n",
@@ -555,7 +582,7 @@
     "else:\n",
     "    print(a,' is not divisble by 3 itself hence I wont check if it is diviisible by 5')\n",
     "    \n",
-    "print('We understood if-else')"
+    "print('We understood Nested-if')"
    ]
   },
   {
@@ -608,14 +635,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6118f7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "482c9a39",
    "metadata": {},
@@ -627,12 +646,6 @@
     "- **Multiple Conditions:** You can have as many elif clauses as needed to handle various conditions.\n",
     "- **Execution Flow:** Python evaluates the conditions sequentially, executing the block of code associated with the first true condition encountered."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "013b3bc5",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
