--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -55,7 +55,25 @@
       "1\n",
       "2\n",
       "3\n",
-      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "007df63b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2\n",
       "3\n",
       "4\n",
@@ -66,16 +84,13 @@
     }
    ],
    "source": [
-    "for i in range(5):\n",
-    "    print(i)\n",
-    "\n",
     "for i in range(2, 8):\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "021aecea",
    "metadata": {},
    "outputs": [
@@ -83,15 +98,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "odd 1\n",
-      "even 2\n",
-      "odd 3\n",
-      "even 4\n",
-      "odd 5\n",
-      "even 6\n",
-      "odd 7\n",
-      "even 8\n",
-      "odd 9\n"
+      "1 is odd\n",
+      "2 is even\n",
+      "3 is odd\n",
+      "4 is even\n",
+      "5 is odd\n",
+      "6 is even\n",
+      "7 is odd\n",
+      "8 is even\n",
+      "9 is odd\n"
      ]
     }
    ],
@@ -100,14 +115,14 @@
     "\n",
     "for num in numbers:\n",
     "    if (num%2==0):\n",
-    "        print(\"even\",num)\n",
-    "    elif (num%2!=0):\n",
-    "        print(\"odd\",num)"
+    "        print(num, \"is even\")\n",
+    "    else:\n",
+    "        print(num, \"is odd\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "20a68c67",
    "metadata": {
     "scrolled": true
@@ -121,17 +136,15 @@
       "b\n",
       "c\n",
       "d\n",
-      "e\n"
+      "e\n",
+      "a\n"
      ]
     }
    ],
    "source": [
     "# a simple code to print all the element of a given list\n",
     "\n",
-    "a = ['a','b','c','d','e']\n",
-    "#a = ('a','b','c','d','e')\n",
-    "#for i in a:\n",
-    "#    print(i)\n",
+    "a = ['a','b','c','d','e','a']\n",
     "\n",
     "for i in range(len(a)):\n",
     "    print(a[i])"
@@ -139,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "ce0b7451",
    "metadata": {},
    "outputs": [
@@ -167,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "49981669",
    "metadata": {},
    "outputs": [
@@ -175,16 +188,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 x 1 = 7\n",
-      "7 x 2 = 14\n",
-      "7 x 3 = 21\n",
-      "7 x 4 = 28\n",
-      "7 x 5 = 35\n",
-      "7 x 6 = 42\n",
-      "7 x 7 = 49\n",
-      "7 x 8 = 56\n",
-      "7 x 9 = 63\n",
-      "7 x 10 = 70\n"
+      "123 x 1 = 123\n",
+      "123 x 2 = 246\n",
+      "123 x 3 = 369\n",
+      "123 x 4 = 492\n",
+      "123 x 5 = 615\n",
+      "123 x 6 = 738\n",
+      "123 x 7 = 861\n",
+      "123 x 8 = 984\n",
+      "123 x 9 = 1107\n",
+      "123 x 10 = 1230\n"
      ]
     }
    ],
@@ -197,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "e0351ad9",
    "metadata": {},
    "outputs": [
@@ -205,26 +218,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75\n",
-      "150\n",
-      "225\n",
-      "300\n",
-      "375\n",
-      "450\n",
-      "525\n",
-      "600\n",
-      "675\n",
-      "750\n",
-      "825\n",
-      "900\n",
-      "975\n",
-      "1050\n",
-      "1125\n",
-      "1200\n",
-      "1275\n",
-      "1350\n",
-      "1425\n",
-      "1500\n"
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n"
      ]
     }
    ],
@@ -237,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "12ba05bc",
    "metadata": {},
    "outputs": [
@@ -246,7 +249,6 @@
       "text/plain": [
        "{'Mercury': 'M',\n",
        " 'Venus': 'V',\n",
-       " 'Earth': 'E',\n",
        " 'Mars': 'M',\n",
        " 'Jupiter': 'J',\n",
        " 'Saturn': 'S',\n",
@@ -254,14 +256,14 @@
        " 'Neptune': 'N'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
-    "planet_to_initial = {planet: planet[0] for planet in planets}\n",
+    "planet_to_initial = {planet: planet[0] for planet in planets if planet != 'Earth'}\n",
     "planet_to_initial"
    ]
   },
