--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -635,6 +635,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4d2ac418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "radar\n",
+      "string is a palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Enter a text: \")\n",
+    "print(s)\n",
+    "if s == s[::-1]:\n",
+    "    print('string is a palindrome')\n",
+    "else:\n",
+    "    print('string is not a palindrome')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "482c9a39",
    "metadata": {},
