--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -295,6 +295,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cda8c06f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_dict = {}\n",
+    "for _ in range(5):\n",
+    "    key = input(\"Enter key: \")\n",
+    "    value = input(\"Enter value: \")\n",
+    "    user_dict[key] = value\n",
+    "print(user_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "522a2ecb",
    "metadata": {},
@@ -374,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "813d25be",
    "metadata": {},
    "outputs": [
@@ -391,7 +406,7 @@
     "a = [1,2,3,4,5,6,7,8,9]\n",
     "_sum = 0\n",
     "for element in a:\n",
-    "    _sum = _sum+element\n",
+    "    _sum += element\n",
     "print(_sum)"
    ]
   },
@@ -468,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "6449621f",
    "metadata": {
     "scrolled": true
@@ -478,6 +493,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "India:Virat Kohli\n",
+      "Pakistan :Sarfraz Ahmed\n",
+      "Australia:Tim Paine\n",
       "South Africa:Faf du Plessis\n"
      ]
     }
@@ -492,31 +510,7 @@
     "#print(captains)\n",
     "for i in captains:\n",
     "    a= (i + ':' + captains[i])\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a1705e1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'India': 'Virat Kohli',\n",
-       " 'Pakistan ': 'Sarfraz Ahmed',\n",
-       " 'Australia': 'Tim Paine',\n",
-       " 'South Africa': 'Faf du Plessis'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "captains"
+    "    print(a)"
    ]
   },
   {
@@ -877,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "44a4e4b9",
    "metadata": {},
    "outputs": [
@@ -885,16 +879,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "5\n"
      ]
     }
    ],
@@ -902,7 +887,7 @@
     "for i in range(10):\n",
     "    if i == 5:\n",
     "        pass\n",
-    "    print(i)"
+    "        print(i)"
    ]
   },
   {
@@ -1055,61 +1040,6 @@
     "for i in my_string:\n",
     "    x=x+1\n",
     "    print(my_string[0:x])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Normal Pyramid\n",
-      "          \n",
-      "    *     \n",
-      "    **    \n",
-      "   ***    \n",
-      "   ****   \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\nNormal Pyramid\")\n",
-    "for i in range(5):\n",
-    "    x = '*'\n",
-    "    x=x*i\n",
-    "    print(f'{x: ^10}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a898e833",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Invert Pyramid\n",
-      "  *****   \n",
-      "   ****   \n",
-      "   ***    \n",
-      "    **    \n",
-      "    *     \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\nInvert Pyramid\")\n",
-    "for i in range(5):\n",
-    "    x = '*'\n",
-    "    x=x*(5-i)\n",
-    "    print(f'{x: ^10}')"
    ]
   },
   {
