--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -927,6 +927,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "b4aa7417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n",
+      "(1, 2)\n",
+      "(2, 3)\n",
+      "(3, 4)\n",
+      "(4, 5)\n",
+      "(5, 6)\n",
+      "(6, 7)\n",
+      "(7, 8)\n",
+      "(8, 9)\n",
+      "(9, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "for i in enumerate(numbers):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "0587f5fc",
    "metadata": {},
