--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -1127,6 +1127,237 @@
     "    x=x*(5-i)\n",
     "    print(f'{x: >10}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d9fb184",
+   "metadata": {},
+   "source": [
+    "### **Comprehension**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b23b836",
+   "metadata": {},
+   "source": [
+    "List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a3920fa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['W', 'E', 'L', 'C', 'O', 'M', 'E']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mystring = \"WELCOME\"\n",
+    "mylist = [ i for i in mystring ] # Iterating through a string Using List Comprehe\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9e7d994b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist1 = [ i for i in range(40) if i % 2 == 0] # Display all even numbers betwee\n",
+    "mylist1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "85302d54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist3 = [num**2 for num in range(10)] # calculate square of all numbers between\n",
+    "mylist3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cf467a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4', '5', '6', '7', '8', '9']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract numbers from a string\n",
+    "mystr = \"One 1 two 2 three 3 four 4 five 5 six 6789\"\n",
+    "numbers = [i for i in mystr if i.isdigit()]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "704e6f48",
+   "metadata": {},
+   "source": [
+    "Dictionary Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cad54a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 2, 2: 4, 3: 6, 4: 8, 5: 10, 6: 12, 7: 14, 8: 16, 9: 18}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "double = {i:i*2 for i in range(10)} #double each value using dict comprehension\n",
+    "double"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7b7073d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = {i:i**2 for i in range(10)}\n",
+    "square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "45c1b691",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 1, 'two': 2, 'three': 3, 'four': 4, 'five': 5}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key = ['one' , 'two' , 'three' , 'four' , 'five']\n",
+    "value = [1,2,3,4,5]\n",
+    "mydict = {k:v for (k,v) in zip(key,value)} # using dict comprehension to create d\n",
+    "mydict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "74b23e3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 'A',\n",
+       " 'b': 'B',\n",
+       " 'c': 'C',\n",
+       " 'd': 'D',\n",
+       " 'e': 'E',\n",
+       " 'f': 'F',\n",
+       " 'g': 'G',\n",
+       " 'h': 'H',\n",
+       " 'i': 'I',\n",
+       " 'j': 'J',\n",
+       " 'k': 'K',\n",
+       " 'l': 'L',\n",
+       " 'm': 'M',\n",
+       " 'n': 'N',\n",
+       " 'o': 'O',\n",
+       " 'p': 'P',\n",
+       " 'q': 'Q',\n",
+       " 'r': 'R',\n",
+       " 's': 'S',\n",
+       " 't': 'T',\n",
+       " 'u': 'U',\n",
+       " 'v': 'V',\n",
+       " 'w': 'W',\n",
+       " 'x': 'X',\n",
+       " 'y': 'Y',\n",
+       " 'z': 'Z'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "mydict3 = {i:i.upper() for i in str1} # Lower to Upper Case\n",
+    "mydict3"
+   ]
   }
  ],
  "metadata": {
